--- a/introduction.tex
+++ b/introduction.tex
@@ -16,12 +16,12 @@ One potential source of functional plasticity can be found in regions of protein
 For a long time, these types of protein element were overlooked in favour of studying stable folding patterns. IDRs were thought to act simply as flexible linkers between structural domains without any  function or their own. This was also due in part to the fact that the main tool being used for structural biology, X-ray crystallography, fails to detect patterns in unfolded chains, making it difficult to study highly dynamic elements in protein such as IDPs. Techniques that do produce information on dynamics such as NMR only developed for proteins until much later. The first protein structure solved by X-ray crystallography was in 1958 and it was not until 1984 that the first protein structure was solved using NMR. Likewise, until recently, computational tools to study protein dynamics {\it ab initio}, such as Molecular Dynamics (MD) were greatly limited by shortcomings in processor power. However, with large advances in experimental and computational techniques in recent years, we have been able to study the dynamic properties of IDEs in great detail, and have found that they play key roles in the functioning of molecular machines. 
 
 
-\begin{figure}
-\centering
-\includegraphics[height=0.35\textheight]{figures/tub4_tyr.png}
-\caption{Homology model of $\gamma$-Tubulin from human crystal structure. Features a large organized globular domain with stable  $\beta$-sheet and $\alpha$-helix domains. IDPs can be seen linking structured domains as well as protruding from the globular domain on the C-terminus (red). }
-\label{tub4}
-\end{figure}
+%\begin{figure}
+%\centering
+%\includegraphics[height=0.35\textheight]{figures/tub4_tyr.png}
+%\caption{Homology model of $\gamma$-Tubulin from human crystal structure. Features a large organized globular domain with stable  $\beta$-sheet and $\alpha$-helix domains. IDPs can be seen linking structured domains as well as protruding from the globular domain on the C-terminus (red). }
+%\label{tub4}
+%\end{figure}
 
 \section{Physical mechanisms of IDP function in cellular machines}
 
