--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -44,7 +44,17 @@ Although we do not observe global secondary structure rearrangements by looking 
 	
 {\it \gct{} is largely collapsed}
 
-Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. We use two metrics to measure the compactness of the polypeptides: radius of gyration and translational diffusion coefficient. As a reference point for interpreting the gyration or diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of extended peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. Because \texttt{flexiblemeccano} ignores electrostatic and hydrophobic interactions, the resulting ensemble falls into an extended random coil conformations which can then be used as a comparison tool for experimental or simulation derived values.
+Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. In order to obtain values of compactness that can be compared directly to NMR results, we compute the translational diffusion coefficient of conformers in our simulations. As a reference point for interpreting the diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of extended peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. \todo{FM generates collapsed structures too!} Due to the high complexity of simulating the folded state of a polypeptide {\it ab initio} we use experimentally derived hydrodynamic radius values for similar length compact polypeptides ~\cite{wilkins1999hydrodynamic} as a reference point for a collapsed conformation.
+
+From our simulations, we computed global averages for the radius of gyration, and translational diffusion coefficient over the \SI{2}{\us} simulations. Both simuations appear to occupy largely collapsed conformations which agrees with experimental findings, as well as with characterizations of other collapsed conformations. The WT polypeptide \diffusion mean is \diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} which agrees well with  
+
+\todo{insert RG time plot}
+\todo{insert RG dist plot, with FM dist}
+
+
+
+\todo{talk about benchmark for collapsed state}
+
 
 \begin{figure}
 \centering
@@ -53,8 +63,9 @@ Given that NMR reports transitions between extended and collapsed conformations 
 \label{flexiblemeccano}
 \end{figure}
 
+\todo{give global averages and distributions}
 
-Translational diffusion coefficient measurements in NMR report that both \gct{} forms primarily occupy collapsed conformations. The global experimental average for the WT polypeptide obtained through NMR is \diffusion{}=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits} which 
+Translational diffusion coefficient measurements in NMR report that both \gct{} forms primarily occupy collapsed conformations. The global experimental average for the WT polypeptide obtained through NMR is \diffusion{}=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits} which agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}. Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct{} polypeptide is slightly lower than that of the WT \gct{} (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct{}, while disordered, is more compact than a fully denatured polypeptide chain.
 
 Insert Rg/Dc figures and distributions.
 
