--- a/thesis_cgo.bib
+++ b/thesis_cgo.bib
@@ -18,3 +18,13 @@
   year={2000},
   publisher={Elsevier}
 }
+@article{wilkins1999hydrodynamic,
+  title={Hydrodynamic radii of native and denatured proteins measured by pulse field gradient NMR techniques},
+  author={Wilkins, Deborah K and Grimshaw, Shaun B and Receveur, V{\'e}ronique and Dobson, Christopher M and Jones, Jonathan A and Smith, Lorna J},
+  journal={Biochemistry},
+  volume={38},
+  number={50},
+  pages={16424--16431},
+  year={1999},
+  publisher={ACS Publications}
+}
