--- a/thesis_cgo.tex
+++ b/thesis_cgo.tex
@@ -11,8 +11,10 @@
 \usepackage{graphicx}
 \usepackage{subfigure}
 
+
+
 %%%% VARIABLES %%%%%
-\newcommand{\diffusion}{$Dc$}
+\newcommand{\diffusion}{$D_{t}$}
 \newcommand{\gct}{$\gamma$-CT}
 \newcommand{\dcunits}{\cm\squared\per\second}
 \newcommand{\figref}[1]{{\bf Fig. \ref{#1}}}
