--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -26,14 +26,12 @@ We obtained atomic trajectories for the WT and YD forms of the \gct{} in full at
 
 The first question we addressed was whether the structures in our MD trajectories feature the same lack of global structure that was observed in NMR. We used the \texttt{dssp} algorithm \todo{cite} in VMD to compute secondary structure assignments on each residue in the chain. Assignments by \texttt{dssp} are based on computations of hydrogen bonding energies between all atoms. Since hydrogen bonds are the primary stabilizing interaction that gives rise to backbone secondary structure, \texttt{dssp} is able to classify geometries arising from potential hydrogen bonds to a category of secondary structure motif. We apply this algorithm to every frame in the trajectories to assess secondary structure motifs at every residue as a function of simulation time \todo{fig ref}. Apart from some local helicity in the middle residues, secondary structure assignment plots for all four trajectories point to a consistent absence of global secondary structure motif. The major classes of secondary structure present are turn and coil geometries which correspond to a largely unstructured ensemble of conformations. 
 
-%\begin{figure}
-%	\centering     %%% not \center
-%	\subfigure[WT Run 1]{\label{fig:a}\includegraphics[width=0.49\textwidth]{figures/wt_ss.pdf}}
-%	\subfigure[YD Run 1]{\label{fig:b}\includegraphics[width=0.49\textwidth]{figures/yd_ss.pdf}}
-%	\subfigure[WT Run 2]{\label{fig:a}\includegraphics[width=0.49\textwidth]{figures/wt_rep_ss.pdf}}
-%	\subfigure[YD Run 2]{\label{fig:b}\includegraphics[width=0.49\textwidth]{figures/yd_rep_ss.pdf}}
-%	\caption{Secondary structure assignments}
-%\end{figure}	
+\begin{figure}
+	\centering     %%% not \center
+	\subfigure[WT Run 1]{\label{fig:a}\includegraphics[width=0.7\textwidth]{figures/wt_ss.pdf}}
+	\subfigure[YD Run 1]{\label{fig:b}\includegraphics[width=0.7\textwidth]{figures/yd_ss.pdf}}
+	\caption{Secondary structure assignments}
+\end{figure}	
 
 Although we do not observe global secondary structure rearrangements by looking at \texttt{dssp}, RMSD plots point to the presence conformational rearrangements in the mutated \gct{}. RMSD quantifies the distance between superimposed structures and is therefore a useful tool for detecting the presence of conformational changes in a trajectory. We therefore computed backbone RMSD values for every frame in the simulation with respect to the starting structure. Since the starting conformation is not derived from experimental data and is not expected to correspond to a native state, we also compute RMSD with a 10ns sliding window where every frame is compared with the one 10ns before. \todo{talk about figures} It is clear that the addition of a charged residue is able to modulate conformational exploration and the stability of the \gct{} so we now ask what kind of dynamic behaviour is taking place. 
 
@@ -41,6 +39,12 @@ Although we do not observe global secondary structure rearrangements by looking 
 \todo{RMSD betwewen WT and YD?}
 
 \todo{RMSD figs}
+\begin{figure}
+	\centering     %%% not \center
+	\subfigure[RMSD to initial frame]{\label{fig:a}\includegraphics[width=0.7\textwidth]{figures/rmsd.pdf}}
+	\subfigure[RMSD 10ns window]{\label{fig:b}\includegraphics[width=0.7\textwidth]{figures/rmsd_10.pdf}}
+	\caption{Secondary structure assignments}
+\end{figure}
 	
 {\it \gct{} is largely collapsed}
 
@@ -53,12 +57,14 @@ From our simulations, we computed global averages for the radius of gyration, an
 
 
 
+
+
 \todo{talk about benchmark for collapsed state}
 
 
 \begin{figure}
 \centering
-\includegraphics{figures/flexiblemeccano.png}
+\includegraphics[height=0.5\textwidth]{figures/FM_dist.png}
 \caption{Random coil ensemble of YD \gct{}}
 \label{flexiblemeccano}
 \end{figure}
@@ -69,10 +75,22 @@ Translational diffusion coefficient measurements in NMR report that both \gct{} 
 
 Insert Rg/Dc figures and distributions.
 
-%\begin{figure}
-%	\includegraphics[height=0.8\textheight]{figures/gyr_run12.pdf}
-%
-%\end{figure}
+\begin{figure}
+\centering
+\includegraphics[height=0.3\textheight]{figures/dc_time.png}
+\end{figure}
+
+
+\begin{figure}
+\centering     %%% not \center
+\subfigure[Figure A]{\label{fig:a}\includegraphics[width=0.49\textwidth]{figures/wt_hist.pdf}}
+\subfigure[Figure B]{\label{fig:b}\includegraphics[width=0.49\textwidth]{figures/yd_2gauss.pdf}}
+\subfigure[Figure C]{\label{fig:b}\includegraphics[width=0.49\textwidth]{figures/lines_dc.pdf}}
+\caption{Distribution of diffusion coefficients}
+\end{figure}
+
+
+
 
 {\it Collective/correlated motions between collapsed and extended states}
 
@@ -137,10 +155,10 @@ Representative structures obtained identifying structures with lowest all-to-all
 %\begin{figure}
 %\includegraphics{figures/Figure_9.png}
 %\end{figure}
-%
-%\begin{figure}
-%\includegraphics[scale=0.5]{figures/yd_porcupine.png}
-%\end{figure}
+
+\begin{figure}
+\includegraphics[scale=0.5]{figures/yd_porcupine.png}
+\end{figure}
 
 The CTs of $\alpha$- $\beta$- and $\gamma$-tubulins are enriched in acidic residues (Asp, Glu). \gct{} s across eukaryotes additionally contain clusters of hydrophobic or polar residues which are not found in $\alpha$- or $\beta$-CTs. Interestingly, the residues most broadened in Y11D NMR spectra, i.e. those most affected by the compact-to-extended transition (V15, D19, E20, A32, G34), are all found in positions conserved either on a sequence level or on a physical property level (polarity/charge) in a consensus \gct{} sequence(Fig. 9B). This suggests that clusters of hydrophobic residues, including those that contribute to transitions between compact and extended confor-mations in the S.c. D11 \gct{}, are a feature of an otherwise diverse set of \gct{} s across many eukaryotic organisms.  
 
