--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -52,21 +52,15 @@ Given that NMR reports transitions between extended and collapsed conformations 
 
 From our simulations, we computed global averages for the radius of gyration, and translational diffusion coefficient over the \SI{2}{\us} simulations. Both simuations appear to occupy largely collapsed conformations which agrees with experimental findings, as well as with characterizations of other collapsed conformations. The WT polypeptide \diffusion mean is \diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} which agrees well with  
 
-\todo{insert RG time plot}
-\todo{insert RG dist plot, with FM dist}
-
-
-
-
 
 \todo{talk about benchmark for collapsed state}
 
 
 \begin{figure}
-\centering
-\includegraphics[height=0.5\textwidth]{figures/FM_dist.png}
-\caption{Random coil ensemble of YD \gct{}}
-\label{flexiblemeccano}
+	\centering     %%% not \center
+	\subfigure[RMSD to initial frame]{\label{fig:a}\includegraphics[width=0.49\textwidth]{figures/FM_hist.pdf}}
+	\subfigure[RMSD 10ns window]{\label{fig:b}\includegraphics[height=0.35\textheight]{figures/FM_rainbows.pdf}}
+	\caption{Secondary structure assignments}
 \end{figure}
 
 \todo{give global averages and distributions}
@@ -75,9 +69,12 @@ Translational diffusion coefficient measurements in NMR report that both \gct{} 
 
 Insert Rg/Dc figures and distributions.
 
+
 \begin{figure}
-\centering
-\includegraphics[height=0.3\textheight]{figures/dc_time.png}
+	\centering     %%% not \center
+	\subfigure[RMSD to initial frame]{\label{fig:a}\includegraphics[height=0.49\textheight]{figures/dc_ts.pdf}}
+	\subfigure[RMSD 10ns window]{\label{fig:b}\includegraphics[height=0.4\textheight]{figures/dc_strucs.pdf}}
+	\caption{Secondary structure assignments}
 \end{figure}
 
 
@@ -111,6 +108,19 @@ Despite there
 
 Insert PCA figures.
 
+\begin{figure}
+	\centering     %%% not \center
+	\subfigure[WT]{\label{fig:a}\includegraphics[width=0.7\textwidth]{figures/2d_scatter_wt.pdf}}
+	\subfigure[YD]{\label{fig:b}\includegraphics[width=0.7\textwidth]{figures/2d_scatter_yd.pdf}}
+	\caption{Secondary structure assignments}
+\end{figure}
+
+\begin{figure}
+\centering
+	\includegraphics[height=0.5\textheight]{figures/eigenvals.pdf}
+\end{figure}
+
+
 %\begin{figure}
 %\centering
 %\includegraphics[height=0.6\textheight]{/Users/carlosgonzalez/Masters/Vogel-MD-Analysis/Figures/eigenvals.pdf}
@@ -119,16 +129,7 @@ Insert PCA figures.
 
 \subsection{Collective motions correspond to transitions between extended and collapsed conformations}
 
-%\begin{figure}
-%\centering
-%\includegraphics[height=0.5\textheight]{figures/2d_scatter_wt.png}
-%\caption{WT PCA}
-%\end{figure}
 
-%\begin{figure}
-%\centering
-%\includegraphics[height=0.5\textheight]{figures/2d_scatter_yd.png}
-%\end{figure}
 
  and computed the translational diffusion coefficient from the resulting MDS structural trajectories at 1 ns time steps \figref{dc}. We found that the diffusion coefficient (\diffusion) of the WT \gct{} remains relatively constant over the total simulation time (\diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} and agrees well with the NMR-derived value (\diffusion=\num{1.25e-6} $\pm$  \SI{1e-8}{\dcunits}.  Similarly to what was seen by NMR, we find that the mean \diffusion of the Y11D \gct{} polypeptide is slightly lower than that of the WT \gct{} (\diffusion= \num{1.224e-6} $\pm$ \SI{3.503e-8}{\dcunits}). These results confirm that the \gct{}, while disordered, is more compact than a fully denatured polypeptide chain. Interestingly, between \num{762} to \SI{1255}{\ns} in the MDS, the Y11D \gct{} underwent transient excursions to less compact con-formations with significantly lower diffusion coefficients (mean \diffusion{}= \num{1.152e-6} $\pm$ \SI{2.0325e-8}{\dcunits}). This sub-population is more extended (i.e. diffuses more slowly) than any conformation sampled by the WT \gct{} throughout the entire MDS. While the Y11D \gct{} extended states do not overlap with the conformational ensemble of the WT \gct{} polypeptides, they do, however, lie within the conformational space expected for a typical random-coil poly-peptide, as modeled by an ensemble of 10,000 disordered extended conformers (Fig. S8) derived from the \gct{} primary sequence using the \texttt{Flexible Meccano} tool.  
 
