started with results writing

--- a/gctmd_chapter.tex
+++ b/gctmd_chapter.tex
@@ -48,10 +48,11 @@ Although we do not observe global secondary structure rearrangements by looking 
 	
 {\it \gct{} is largely collapsed}
 
-Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. In order to obtain values of compactness that can be compared directly to NMR results, we compute the translational diffusion coefficient of conformers in our simulations. As a reference point for interpreting the diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of extended peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. \todo{FM generates collapsed structures too!} Due to the high complexity of simulating the folded state of a polypeptide {\it ab initio} we use experimentally derived hydrodynamic radius values for similar length compact polypeptides ~\cite{wilkins1999hydrodynamic} as a reference point for a collapsed conformation.
+Given that NMR reports transitions between extended and collapsed conformations in the YD mutant, we hypothesize that a similar motion is driving the displacement observed in the RMSD computations. In order to obtain values of compactness that can be compared directly to NMR results, we compute the translational diffusion coefficient of conformers in our simulations. As a reference point for interpreting the diffusion values of the trajectories, we use the software \texttt{flexiblemeccano} to compute an esmeble of extended peptides of the YD polypeptide. \texttt{flexiblemeccano} takes a primary sequence as input and generates an ensemble of 3D conformations based on amino acid specific conformational potentials and volume exclusion. \todo{FM generates collapsed structures too!} Due to the high complexity of simulating the folded state of a polypeptide {\it ab initio} we use experimentally derived hydrodynamic radius values for similar length compact polypeptides ~\cite{wilkins1999hydrodynamic} as a reference point for a collapsed conformation. 
 
 From our simulations, we computed global averages for the radius of gyration, and translational diffusion coefficient over the \SI{2}{\us} simulations. Both simuations appear to occupy largely collapsed conformations which agrees with experimental findings, as well as with characterizations of other collapsed conformations. The WT polypeptide \diffusion mean is \diffusion = \num{1.237e-6} $\pm$ \SI{1.5816e-8}{\dcunits} which agrees well with  
 
+\todo{chi square goodness of fit}
 
 \todo{talk about benchmark for collapsed state}
 
